--- a/src/i18n/bn/translation.json
+++ b/src/i18n/bn/translation.json
@@ -215,60 +215,54 @@
         "viewDemo": "লাইভ ডেমো দেখুন"
       },
       "projects": [
-        {
-          "title": "পরিচয় যাচাইকরণ",
-          "description": "ট্রেডিং যাচাইয়ের জন্য আপনার পরিচয়ের প্রমাণ আপলোড করুন।",
-          "image": "project_1.png",
-          "deploymentUrl": "https://trading-platform-zir6.vercel.app"
-        },
-        {
-          "title": "স্টক মার্কেট ওভারভিউ",
-          "description": "শীর্ষ লাভকারী, শীর্ষ ক্ষতিগ্রস্থ এবং বিস্তারিত বাজার প্রবণতা দেখুন।",
-          "image": "project_2.png",
-          "deploymentUrl": "https://trading-platform-seven-omega.vercel.app"
-        },
-        {
-          "title": "ওয়ালেট এবং লেনদেন ইতিহাস",
-          "description": "আপনার ওয়ালেট পরিচালনা করুন এবং লেনদেনের ইতিহাস দেখুন।",
-          "image": "project_3.png",
-          "deploymentUrl": "https://trade-linkers.vercel.app"
-        },
-        {
-          "title": "ই-কমার্স প্ল্যাটফর্ম",
-          "description": "বই কেনার জন্য আধুনিক ই-কমার্স সমাধান।",
-          "image": "project_4.png",
-          "deploymentUrl": "https://boighor-front-s.vercel.app"
-        },
-        {
-          "title": "বইয়ের সংগ্রহ",
-          "description": "বইয়ের বিশাল সংগ্রহ ব্রাউজ এবং ফিল্টার করুন।",
-          "image": "project_5.png",
-          "deploymentUrl": "https://birds-of-eden.vercel.app"
-        },
-        {
-          "title": "ড্যাশবোর্ড অ্যানালিটিক্স",
-          "description": "গ্রুপ করা বার এবং লাইন চার্ট সহ ডেটা ভিজ্যুয়ালাইজেশন।",
-          "image": "project_6.png",
-          "deploymentUrl": "https://orm-dash.vercel.app"
-        },
-        {
-          "title": "সুনাম ব্যবস্থাপনা",
-          "description": "আপনার সুনাম নিয়ন্ত্রণ করুন এবং কাস্টমাইজড পরিষেবাগুলি উপভোগ করুন।",
-          "image": "project_7.png",
-          "deploymentUrl": "https://reputation-prime.vercel.app"
-        },
-        {
-          "title": "পণ্য প্রদর্শনী",
-          "description": "বিস্তারিত পণ্য প্রদর্শনী এবং প্রচারমূলক ব্যানার।",
-          "image": "project_9.png",
-          "deploymentUrl": "https://trade-link-engineer-ltd.vercel.app"
-        },
-        {
-          "title": "মূল্য নির্ধারণ এবং সাবস্ক্রিপশন",
-          "description": "ভিন্ন ব্যবহারকারীর চাহিদার জন্য নমনীয় মূল্য পরিকল্পনা।",
-          "image": "project_10.png",
-          "deploymentUrl": "https://reputation-prime-ai.vercel.app"
-        },
+         {
+    "title": "বাংলাদেশ আবহাওয়া সরকারি প্রকল্প",
+    "description": "উন্নত আবহাওয়া বিশ্লেষণ প্ল্যাটফর্ম। এই আধুনিক ড্যাশবোর্ডটি নির্ভুলতা ও স্পষ্টতার সাথে বাংলাদেশের জন্য বিস্তৃত আবহাওয়া সংক্রান্ত তথ্য ও বিশ্লেষণ প্রদান করে।",
+    "image": "BDW1.png",
+    "deploymentUrl": "https://www.bmdcl17.com/"
+  },
+  {
+    "title": "ইসলামি দাওয়াহ ইনস্টিটিউট",
+    "description": "ইসলামি দাওয়াহ একটি Next.js (App Router) ও TypeScript ভিত্তিক অ্যাপ্লিকেশন, যা ইসলামি দাওয়াত কার্যক্রমের সমন্বয় ও রিপোর্টিংয়ের জন্য তৈরি। এতে অ্যাডমিন, দায়ী/অ্যাম্বাসেডর, অ্যাসিস্ট্যান্ট ও সাধারণ ব্যবহারকারীর জন্য ভূমিকা-ভিত্তিক ড্যাশবোর্ড রয়েছে।",
+    "image": "ISD1.jpeg",
+    "deploymentUrl": "https://hisab.hilfulfujulbd.com/"
+  },
+  {
+    "title": "মুভিং কোট টেক্সাস",
+    "description": "মুভিং টেক্সাস টেক্সাস জুড়ে সম্পূর্ণ স্থানান্তর সেবা প্রদান করে। এই প্ল্যাটফর্মটি গ্রাহকদের নির্ভরযোগ্য মুভারদের সাথে সংযুক্ত করে, তাৎক্ষণিক কোট প্রদান করে, রিয়েল-টাইমে মুভিং অগ্রগতি ট্র্যাক করে এবং ঝামেলামুক্ত অভিজ্ঞতার জন্য প্রয়োজনীয় সকল রিসোর্স সরবরাহ করে।",
+    "image": "MQT1.png",
+    "deploymentUrl": "https://movingquotetexas.com/"
+  },
+  {
+    "title": "হিলফুল ফুযুল — বইয়ের দোকান",
+    "description": "হিলফুল ফুযুল একটি Next.js (App Router) ও TypeScript ভিত্তিক ই-কমার্স প্ল্যাটফর্ম, যা বই ও প্রকাশকদের জন্য বিশেষভাবে তৈরি। এতে পণ্য, লেখক, প্রকাশক ও অর্ডার ব্যবস্থাপনার জন্য অ্যাডমিন প্যানেল রয়েছে, পাশাপাশি গ্রাহকদের জন্য ক্যাটাগরি ব্রাউজিং, সার্চ, কার্ট, উইশলিস্ট এবং পেমেন্টসহ সম্পূর্ণ চেকআউট সিস্টেম অন্তর্ভুক্ত।",
+    "image": "KG2.png",
+    "deploymentUrl": "https://hilfulfujulbd.com/"
+  },
+  {
+    "title": "মুভিং কোট নিউ ইয়র্ক",
+    "description": "মুভিং কোট নিউ ইয়র্ক নিউ ইয়র্ক জুড়ে পূর্ণাঙ্গ স্থানান্তর সেবা প্রদান করে। এই প্ল্যাটফর্মটি গ্রাহকদের নির্ভরযোগ্য মুভারদের সাথে যুক্ত করে, তাৎক্ষণিক কোট দেয়, রিয়েল-টাইমে মুভিং স্ট্যাটাস ট্র্যাক করে এবং একটি চাপমুক্ত অভিজ্ঞতা নিশ্চিত করে।",
+    "image": "MQN1.png",
+    "deploymentUrl": "https://movingquotenewyork.com/"
+  },
+  {
+    "title": "নেট রেপুটেশন টাস্ক ম্যানেজমেন্ট সিস্টেম",
+    "description": "নেট রেপুটেশন টাস্ক ম্যানেজমেন্ট সিস্টেম একটি Next.js (App Router) ও TypeScript ভিত্তিক প্ল্যাটফর্ম, যা সম্পূর্ণ ক্লায়েন্ট অপারেশন পরিচালনার জন্য ব্যবহৃত হয়। এতে অ্যাডমিন, AM/CEO, এজেন্ট, QC, ডাটা এন্ট্রি ও ক্লায়েন্টদের জন্য ভূমিকা-ভিত্তিক ড্যাশবোর্ড, টাস্ক ও QC ওয়ার্কফ্লো, পজ কারণ এবং পারফরম্যান্স স্কোরিং অন্তর্ভুক্ত।",
+    "image": "NR2.png",
+    "deploymentUrl": "http://app.netreptask.com/"
+  },
+  {
+    "title": "রেপুটেশন প্রাইম",
+    "description": "রেপুটেশন প্রাইম একটি আধুনিক টাস্ক ম্যানেজমেন্ট সিস্টেম, যা Next.js (App Router) ও TypeScript দিয়ে তৈরি। এটি এন্ড-টু-এন্ড ক্লায়েন্ট অপারেশন পরিচালনার জন্য ভূমিকা-ভিত্তিক ড্যাশবোর্ড, টাস্ক ও QC ব্যবস্থাপনা, পজ ট্র্যাকিং এবং পারফরম্যান্স মূল্যায়ন সুবিধা প্রদান করে।",
+    "image": "RP2.png",
+    "deploymentUrl": "https://reputationtask.com/"
+  },
+  {
+    "title": "গ্রাভিওন — স্বাস্থ্য, সুস্থতা ও মানবতার নতুন উচ্চতা",
+    "description": "গ্রাভিওনে আমরা বিশ্বাস করি বিলাসিতা ও সুস্থতার সংযোগে, যেখানে বিজ্ঞান ও মানবিকতা একত্রিত হয়। আমাদের দৃষ্টিভঙ্গি নির্ভুলতা-নির্ভর, গবেষণা দ্বারা পরিচালিত এবং মানব সম্ভাবনার সর্বোচ্চ বিকাশ দ্বারা অনুপ্রাণিত।",
+    "image": "GR1.png",
+    "deploymentUrl": "https://www.gravionne.com/"
+  },
         {
           "title": "অ্যাকাউন্ট কন্টাক্টস",
           "description": "অ্যাকাউন্টের যোগাযোগ এবং ব্যবহারকারীর অনুমতি পরিচালনা করুন।",
