--- a/src/i18n/ja/translation.json
+++ b/src/i18n/ja/translation.json
@@ -72,30 +72,54 @@
       "title": "当社のERPプロジェクト",
       "button": "戻る",
       "projects": [
-        {
-          "id": 1,
-          "title": "売上インサイトダッシュボード",
-          "description": "売上インサイトダッシュボードは、企業に包括的なリアルタイムの売上データを提供するように設計された高度な分析ツールです。製品ライン、地理的地域、期間など、さまざまな側面から売上パフォーマンスを視覚化できる動的でインタラクティブなインターフェースを提供します。このダッシュボードは、既存のERPシステムと統合して売上データを抽出し、統合し、明確で実用的な形式で表示します。主な機能には、カスタマイズ可能なチャートとグラフ、詳細なデータを探索するためのドリルダウン機能、および将来の売上トレンドを予測する予測分析が含まれます。このツールを活用することで、企業はトップパフォーマー製品を特定し、改善の余地がある領域を特定し、売上戦略を最適化して収益成長を促進するための情報に基づいた意思決定を行うことができます。ダッシュボードは詳細な売上レポートの作成も容易にし、関係者が進捗状況を追跡し、売上イニシアチブの影響を測定できるようにします。これにより、営業チームは取引をより迅速かつ効果的に成立させるために必要な情報を提供し、最終的に全体的な売上パフォーマンスと収益性を向上させます。",
-          "image": "project_14.png"
-        },
-        {
-          "id": 2,
-          "title": "顧客最適化分析",
-          "description": "顧客最適化分析ツールは、顧客エンゲージメント、行動、満足度に関する深い洞察を企業に提供します。顧客インタラクションのパターンと傾向を明らかにする高度な分析を提供することで、基本的なCRMデータをはるかに超えています。このツールは、CRMシステム、カスタマーサポートプラットフォーム、マーケティングオートメーションツールなど、さまざまなデータソースと統合し、顧客ライフサイクルの全体像を提供します。高度なセグメンテーション機能を備えており、企業は高価値の顧客を特定し、それに応じてサービスを調整できます。ツールには、顧客のフィードバックを評価し、改善の余地がある領域を特定するセンチメント分析も含まれています。顧客のニーズと好みを理解することで、企業は顧客維持率を高め、顧客生涯価値を高め、全体的な顧客満足度を向上させることができます。顧客最適化分析ツールは、顧客解約リスク、アップセル機会、クロスセル可能性に関する洞察を提供する実用的なレポートとダッシュボードも生成します。これにより、企業は顧客の問題に積極的に対処し、インタラクションをパーソナライズし、より強力な顧客関係を育成し、長期的なロイヤルティを高めることができます。",
-          "image": "project_15.png"
-        },
-        {
-          "id": 3,
-          "title": "キャンペーンパフォーマンスダッシュボード",
-          "description": "キャンペーンパフォーマンスダッシュボードは、企業がさまざまなチャネルでマーケティングキャンペーンを監視および最適化するのに役立ちます。クリック率、コンバージョン率、投資収益率（ROI）などの主要業績評価指標（KPI）を追跡するための中央プラットフォームを提供します。このダッシュボードは、マーケティングオートメーションプラットフォーム、ソーシャルメディアプラットフォーム、広告ネットワークと統合して、キャンペーンパフォーマンスの包括的なビューを提供します。リアルタイム分析が含まれており、企業はデータに基づいた意思決定を行い、キャンペーンをその場で調整できます。主な機能には、カスタマイズ可能なダッシュボード、自動レポート、A/Bテスト機能が含まれます。このツールを活用することで、企業は最も効果的なマーケティングチャネルを特定し、広告費を最適化し、マーケティングキャンペーンの全体的な効果を向上させることができます。キャンペーンパフォーマンスダッシュボードは詳細なキャンペーンレポートの作成も容易にし、マーケターは進捗状況を追跡し、イニシアチブの影響を測定できます。これにより、マーケティングチームはマーケティングROIを最大化し、キャンペーン目標を達成するために必要な洞察を得ることができます。",
-          "image": "project_16.png"
-        },
-        {
-          "id": 4,
-          "title": "シームレスなオンボーディングワークフロー",
-          "description": "シームレスなオンボーディングワークフローは、新規ユーザーのオンボーディングプロセスを簡素化および強化し、スムーズで効率的な移行を保証します。このツールは、アカウント作成、アクセスプロビジョニング、トレーニング資料の配布などの主要なオンボーディングタスクを自動化します。新規ユーザーをオンボーディングプロセスを通してガイドするユーザーフレンドリーなインターフェースを提供し、混乱を最小限に抑え、オンボーディングに必要な時間を短縮します。ワークフローはHRシステムやその他の関連プラットフォームと統合し、情報のシームレスな流れを確保します。主な機能には、自動通知、進捗状況の追跡、カスタマイズ可能なオンボーディングチェックリストが含まれます。オンボーディングプロセスを合理化することで、企業は新規ユーザーの満足度を向上させ、オンボーディングコストを削減し、生産性を向上させることができます。シームレスなオンボーディングワークフローは詳細なオンボーディングレポートの作成も容易にし、HRチームは進捗状況を追跡し、改善の余地がある領域を特定できます。これにより、HRチームは新規ユーザーを成功に導くポジティブなオンボーディングエクスペリエンスを作成できます。",
-          "image": "project_17.png"
-        }
+         {
+    "title": "バングラデシュ気象政府プロジェクト",
+    "description": "高度な気象分析プラットフォーム。精度と明瞭さを重視した本ダッシュボードは、バングラデシュ向けに包括的な気象データと洞察を提供します。",
+    "image": "BDW1.png",
+    "deploymentUrl": "https://www.bmdcl17.com/"
+  },
+  {
+    "title": "イスラミー・ダーワ・インスティテュート",
+    "description": "イスラミー・ダーワは、Next.js（App Router）とTypeScriptで構築された、イスラム布教活動の調整および報告を行うアプリケーションです。管理者、ダアイ／アンバサダー、アシスタント、一般ユーザー向けの役割別ダッシュボードを備えています。",
+    "image": "ISD1.jpeg",
+    "deploymentUrl": "https://hisab.hilfulfujulbd.com/"
+  },
+  {
+    "title": "ムービング・クオート・テキサス",
+    "description": "ムービング・テキサスは、テキサス州全域でエンドツーエンドの引越しサービスを提供します。信頼できる引越し業者とのマッチング、即時見積もり、リアルタイムの進捗追跡により、ストレスのない体験を実現します。",
+    "image": "MQT1.png",
+    "deploymentUrl": "https://movingquotetexas.com/"
+  },
+  {
+    "title": "ヒルフル・フズル — 書店",
+    "description": "ヒルフル・フズルは、書籍および出版社向けに設計されたNext.js（App Router）とTypeScriptベースのECプラットフォームです。商品、著者、出版社、注文管理のための管理機能に加え、検索、カート、ウィッシュリスト、決済機能を備えた顧客向けストアフロントを提供します。",
+    "image": "KG2.png",
+    "deploymentUrl": "https://hilfulfujulbd.com/"
+  },
+  {
+    "title": "ムービング・クオート・ニューヨーク",
+    "description": "ムービング・クオート・ニューヨークは、ニューヨーク州全域で包括的な引越しサービスを提供します。即時見積もり、リアルタイム追跡、信頼性の高い業者との連携により、安心した引越し体験を提供します。",
+    "image": "MQN1.png",
+    "deploymentUrl": "https://movingquotenewyork.com/"
+  },
+  {
+    "title": "ネット・レピュテーション・タスク管理システム",
+    "description": "ネット・レピュテーション・タスク管理システムは、Next.js（App Router）とTypeScriptで構築された、エンドツーエンドのクライアント運用管理プラットフォームです。役割別ダッシュボード、タスクおよびQCワークフロー、パフォーマンス評価機能を備えています。",
+    "image": "NR2.png",
+    "deploymentUrl": "http://app.netreptask.com/"
+  },
+  {
+    "title": "レピュテーション・プライム",
+    "description": "レピュテーション・プライムは、Next.js（App Router）とTypeScriptで構築された高度なタスク管理システムです。役割別ダッシュボードと品質管理ワークフローにより、効率的なクライアント運用を実現します。",
+    "image": "RP2.png",
+    "deploymentUrl": "https://reputationtask.com/"
+  },
+  {
+    "title": "グラヴィオン — 健康・ウェルネス・人類の向上",
+    "description": "グラヴィオンは、科学と人間性が交差するラグジュアリーとウェルネスの融合を信念としています。私たちのアプローチは、精密さ、研究、そして人間の可能性の最大化に根ざしています。",
+    "image": "GR1.png",
+    "deploymentUrl": "https://www.gravionne.com/"
+  }
       ]
     },
     "ormSection": {
@@ -215,90 +239,54 @@
         "viewDemo": "ライブデモを見る"
       },
       "projects": [
-        {
-          "title": "本人確認",
-          "description": "取引確認のために本人確認書類をアップロードしてください。",
-          "image": "project_1.png",
-          "deploymentUrl": "https://trading-platform-zir6.vercel.app"
-        },
-        {
-          "title": "株式市場の概要",
-          "description": "トップゲイナー、トップルーザー、詳細な市場動向を確認。",
-          "image": "project_2.png",
-          "deploymentUrl": "https://trading-platform-seven-omega.vercel.app"
-        },
-        {
-          "title": "ウォレットと取引履歴",
-          "description": "ウォレットを管理し、取引履歴を表示します。",
-          "image": "project_3.png",
-          "deploymentUrl": "https://trade-linkers.vercel.app"
-        },
-        {
-          "title": "Eコマースプラットフォーム",
-          "description": "書籍購入のための最新のEコマースソリューション。",
-          "image": "project_4.png",
-          "deploymentUrl": "https://boighor-front-s.vercel.app"
-        },
-        {
-          "title": "書店コレクション",
-          "description": "豊富な書籍コレクションを閲覧し、フィルタリングします。",
-          "image": "project_5.png",
-          "deploymentUrl": "https://birds-of-eden.vercel.app"
-        },
-        {
-          "title": "ダッシュボード分析",
-          "description": "グループ化されたバーと折れ線グラフによるデータの可視化。",
-          "image": "project_6.png",
-          "deploymentUrl": "https://orm-dash.vercel.app"
-        },
-        {
-          "title": "評判管理",
-          "description": "カスタマイズされたサービスで評判を管理します。",
-          "image": "project_7.png",
-          "deploymentUrl": "https://reputation-prime.vercel.app"
-        },
-        {
-          "title": "製品展示",
-          "description": "詳細な製品表示とプロモーションバナー。",
-          "image": "project_9.png",
-          "deploymentUrl": "https://trade-link-engineer-ltd.vercel.app"
-        },
-        {
-          "title": "価格設定とサブスクリプション",
-          "description": "さまざまなユーザーのニーズに合わせた柔軟な価格プラン。",
-          "image": "project_10.png",
-          "deploymentUrl": "https://reputation-prime-ai.vercel.app"
-        },
-        {
-          "title": "アカウント連絡先",
-          "description": "アカウントの連絡先とユーザーの権限を管理します。",
-          "image": "project_11.png",
-          "deploymentUrl": "https://orm-dash-brok.vercel.app"
-        },
-        {
-          "title": "ダッシュボードの概要",
-          "description": "高度な分析機能を備えた包括的なダッシュボード。",
-          "image": "project_12.jpeg",
-          "deploymentUrl": "https://ormdash-app.vercel.app"
-        },
-        {
-          "title": "引越し費用計算機",
-          "description": "直感的なフォームを使用して引越し費用を計算します。",
-          "image": "project_13.jpeg",
-          "deploymentUrl": "https://moving-quote-newyork.vercel.app"
-        },
-        {
-          "title": "クライアント管理",
-          "description": "クライアントキャンペーンとエンゲージメント指標の概要。",
-          "image": "project_14.png",
-          "deploymentUrl": "https://reputation-form.vercel.app"
-        },
-        {
-          "title": "アクションサマリーダッシュボード",
-          "description": "タスク、アクティビティ、および全体的な生産性を追跡します。",
-          "image": "project_15.png",
-          "deploymentUrl": "https://orm-seo.vercel.app"
-        }
+         {
+    "title": "バングラデシュ気象政府プロジェクト",
+    "description": "高度な気象分析プラットフォーム。精度と明瞭さを重視した本ダッシュボードは、バングラデシュ向けに包括的な気象データと洞察を提供します。",
+    "image": "BDW1.png",
+    "deploymentUrl": "https://www.bmdcl17.com/"
+  },
+  {
+    "title": "イスラミー・ダーワ・インスティテュート",
+    "description": "イスラミー・ダーワは、Next.js（App Router）とTypeScriptで構築された、イスラム布教活動の調整および報告を行うアプリケーションです。管理者、ダアイ／アンバサダー、アシスタント、一般ユーザー向けの役割別ダッシュボードを備えています。",
+    "image": "ISD1.jpeg",
+    "deploymentUrl": "https://hisab.hilfulfujulbd.com/"
+  },
+  {
+    "title": "ムービング・クオート・テキサス",
+    "description": "ムービング・テキサスは、テキサス州全域でエンドツーエンドの引越しサービスを提供します。信頼できる引越し業者とのマッチング、即時見積もり、リアルタイムの進捗追跡により、ストレスのない体験を実現します。",
+    "image": "MQT1.png",
+    "deploymentUrl": "https://movingquotetexas.com/"
+  },
+  {
+    "title": "ヒルフル・フズル — 書店",
+    "description": "ヒルフル・フズルは、書籍および出版社向けに設計されたNext.js（App Router）とTypeScriptベースのECプラットフォームです。商品、著者、出版社、注文管理のための管理機能に加え、検索、カート、ウィッシュリスト、決済機能を備えた顧客向けストアフロントを提供します。",
+    "image": "KG2.png",
+    "deploymentUrl": "https://hilfulfujulbd.com/"
+  },
+  {
+    "title": "ムービング・クオート・ニューヨーク",
+    "description": "ムービング・クオート・ニューヨークは、ニューヨーク州全域で包括的な引越しサービスを提供します。即時見積もり、リアルタイム追跡、信頼性の高い業者との連携により、安心した引越し体験を提供します。",
+    "image": "MQN1.png",
+    "deploymentUrl": "https://movingquotenewyork.com/"
+  },
+  {
+    "title": "ネット・レピュテーション・タスク管理システム",
+    "description": "ネット・レピュテーション・タスク管理システムは、Next.js（App Router）とTypeScriptで構築された、エンドツーエンドのクライアント運用管理プラットフォームです。役割別ダッシュボード、タスクおよびQCワークフロー、パフォーマンス評価機能を備えています。",
+    "image": "NR2.png",
+    "deploymentUrl": "http://app.netreptask.com/"
+  },
+  {
+    "title": "レピュテーション・プライム",
+    "description": "レピュテーション・プライムは、Next.js（App Router）とTypeScriptで構築された高度なタスク管理システムです。役割別ダッシュボードと品質管理ワークフローにより、効率的なクライアント運用を実現します。",
+    "image": "RP2.png",
+    "deploymentUrl": "https://reputationtask.com/"
+  },
+  {
+    "title": "グラヴィオン — 健康・ウェルネス・人類の向上",
+    "description": "グラヴィオンは、科学と人間性が交差するラグジュアリーとウェルネスの融合を信念としています。私たちのアプローチは、精密さ、研究、そして人間の可能性の最大化に根ざしています。",
+    "image": "GR1.png",
+    "deploymentUrl": "https://www.gravionne.com/"
+  }
       ]
     },
     "clientPage": {
